Added get submission by sheet id and get submission detail APIs to the service
